Fix carousel spacing

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -230,13 +230,8 @@ blockquote {
   }
 }
 
-.carousel {
-  margin-top: 3em;
-  margin-bottom: 0.66em;
-
-  img {
-    margin: 0 auto;
-  }
+.carousel img {
+  margin: 0 auto;
 }
 
 // Posts
